--- a/index.css
+++ b/index.css
@@ -7,3 +7,39 @@
   #btn1 {
     margin-bottom: 4px;
   }
+
+
+.btn {
+  font-size: 20px;
+  font-weight: 700;
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  text-align: center;
+  vertical-align: middle;
+  text-decoration: none;
+  letter-spacing: 0.1em;
+  color: #212529;
+  border-radius: 0.5rem;
+  width: 200px;
+  height: 50px;
+}
+
+.btn--orange {
+  color: #fff;
+  background-color: #eb6100;
+}
+.btn--orange:hover {
+  color: #fff;
+  background: #f56500;
+}
+
+.btn--radius {
+    border-radius: 100vh;
+}
