--- a/music_player/css/style.css
+++ b/music_player/css/style.css
@@ -30,7 +30,7 @@ div.audio-player {
 	width: 400px;
 	height: 120px;
 	
-	background: #4c4e5a;
+	background: #F5F5F5;
 	background: -webkit-linear-gradient(top, #4c4e5a 0%, #2c2d33 100%);
 	background: -moz-linear-gradient(top, #4c4e5a 0%, #2c2d33 100%);
 	background: -o-linear-gradient(top, #4c4e5a 0%, #2c2d33 100%);
@@ -50,8 +50,8 @@ div.audio-player {
 
 	font-family: Helvetica, Arial, sans-serif;
 	font-weight: bold;
-	font-size: 14px;
-	color: #ececec;
+	font-size: 24px;
+	color: #333333;
 	text-shadow: 1px 1px 1px rgba(0,0,0, .5);
 }
 
