--- a/music_player/music_player.css
+++ b/music_player/music_player.css
@@ -30,7 +30,7 @@ div.audio-player {
 	width: 400px;
 	height: 120px;
 	
-	background: #4c4e5a;
+	background: #F5F5F5;
 	background: -webkit-linear-gradient(top, #4c4e5a 0%, #2c2d33 100%);
 	background: -moz-linear-gradient(top, #4c4e5a 0%, #2c2d33 100%);
 	background: -o-linear-gradient(top, #4c4e5a 0%, #2c2d33 100%);
@@ -50,8 +50,8 @@ div.audio-player {
 
 	font-family: Helvetica, Arial, sans-serif;
 	font-weight: bold;
-	font-size: 14px;
-	color: #ececec;
+	font-size: 24px;
+	color: #333333;
 	text-shadow: 1px 1px 1px rgba(0,0,0, .5);
 }
 
@@ -77,7 +77,7 @@ div.audio-player {
 	height: 21px;
 	top: 35px;
 	left: 135px;
-	background: transparent url(./img/play-pause.png) 0 0;
+	background: transparent url(../img/play-pause.png) 0 0;
 }
 
 .mejs-controls .mejs-pause button { background-position:0 -21px; }
@@ -89,7 +89,7 @@ div.audio-player {
 	height: 12px;
 	top: 70px;
 	left: 140px;
-	background: transparent url(./img/mute-unmute.png) 0 0;
+	background: transparent url(../img/mute-unmute.png) 0 0;
 }
 
 .mejs-controls .mejs-unmute button { background-position: 0 -12px; }
@@ -122,7 +122,7 @@ div.audio-player {
 	height: 6px;
 	top: 1px;
 	left: 1px;
-	background: url(./img/volume-bar.png) repeat-x;
+	background: url(../img/volume-bar.png) repeat-x;
 
 	-webkit-border-radius: 6px;
 	-moz-border-radius: 6px;
@@ -166,7 +166,7 @@ div.audio-player {
 	width: 12px;
 	height: 14px;
 	top: -4px;
-	background: url(./img/handle.png) no-repeat;
+	background: url(../img/handle.png) no-repeat;
 }
 
 .mejs-controls .mejs-horizontal-volume-slider .mejs-horizontal-volume-handle { top: -2px; }
@@ -179,7 +179,7 @@ div.audio-player {
 	height: 23px;
 	top: -26px;
 	margin-left: -17px;
-	background: url(./img/time-box.png);
+	background: url(../img/time-box.png);
 }
 
 .mejs-controls .mejs-time-rail .mejs-time-float-current {
